[project]
name = "my_project"
version = "0.1.0"
description = "Clio AI Tools"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "mkdocs-techdocs-core>=1.5.0",
    "streamlit>=1.40.1",
    "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"